# EEG_classification

./: .gitignore  README.md  pyproject.toml
multirun/2024-02-12/13-03-21/: multirun.yaml
multirun/2024-02-12/13-03-21/0/.hydra/: config.yaml  hydra.yaml
multirun/2024-02-12/13-25-32/0/.hydra/: config.yaml  hydra.yaml
multirun/2024-02-12/13-25-32/1/.hydra/: config.yaml  hydra.yaml  overrides.yaml
multirun/2024-02-12/13-25-32/2/.hydra/: hydra.yaml  overrides.yaml
multirun/2024-02-12/13-25-32/3/.hydra/: config.yaml  hydra.yaml
multirun/2024-02-12/13-25-42/0/.hydra/: hydra.yaml  overrides.yaml
multirun/2024-02-12/13-37-06/: multirun.yaml
multirun/2024-02-12/13-37-06/0/.hydra/: hydra.yaml
multirun/2024-02-12/13-37-06/1/.hydra/: hydra.yaml
multirun/2024-02-12/13-37-06/2/.hydra/: config.yaml  hydra.yaml
multirun/2024-02-12/13-37-06/3/.hydra/: hydra.yaml  overrides.yaml
multirun/2024-02-12/14-05-25/: multirun.yaml
multirun/2024-02-12/14-05-25/0/.hydra/: config.yaml  hydra.yaml
multirun/2024-02-12/14-15-46/: multirun.yaml
multirun/2024-02-12/14-15-46/0/.hydra/: config.yaml  hydra.yaml
notebooks/: Nature_analaysis2.ipynb
results/: EEGConformer_TDV        _test_day_1.csv  EEGConformer_TDV        _test_day_2.csv  EEGConformer_TDV        _test_day_3.csv  EEGConformer_TDV        _test_day_4.csv  EEGNet_DDV        _test_day_1.csv  EEGNet_DDV        _test_day_2.csv  EEGNet_DDV        _test_day_3.csv  EEGNet_SDTDV        _test_day_1.csv  EEGNet_TDV        _test_day_1.csv  EEGNet_TDV        _test_day_2.csv  EEGNet_TDV        _test_day_3.csv  EEGNet_TDV        _test_day_4.csv  EEGNet_TDV        _test_day_5.csv  EEGNet_TV        _test_day_1.csv
src/: main.py  train_test.py
src/config/: conf.py
src/config/Yaml/: config.yaml
src/data/: data_loader.py
src/data_augmentation/: data_augmentation.py
src/models/: model.py
src/untils/: datacollector.py  setup_wandb.py
tests/src/data/: test_data_loader.py
